--- a/project6.html
+++ b/project6.html
@@ -5,8 +5,7 @@
 		<title></title>
 	</head>
 	<body>
-	<div id="header"> </div>
-	<h1>header</h1> 
+	<div id="header"> <h1>header</h1>  </div>
 	<div class="left"> </div>
 	<p> paragraphs</p> 
 	<p> paragraphs</p> 
