--- a/project6.html
+++ b/project6.html
@@ -5,15 +5,19 @@
 		<title></title>
 	</head>
 	<body>
-	<div id="header"> <h1>header</h1>  </div>
-	<div class="left"> </div>
-	<p> paragraphs</p> 
-	<p> paragraphs</p> 
-	<div class="right"> </div>
-	<ul>
-    <li>list item</li>
-    <li>list item</li>
-    </ul>
+	<div id="header"> 
+		<h1>header</h1> 
+	</div>
+	<div class="left"> 
+		<p> paragraphs</p> 
+		<p> paragraphs</p>  
+	</div>
+	<div class="right"> 
+		<ul>
+   		 <li>list item</li>
+    		<li>list item</li>
+   		 </ul>
+	</div>
 	<div id="footer"> </div> 
 	</body>
 </html>
